<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF">

    <ImageButton
        android:contentDescription="@string/home_btn"
        android:id="@+id/homeBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        android:layout_gravity="start"
        android:background="@drawable/home_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".3333"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:contentDescription="@string/stats_btn"
        android:id="@+id/statsBtn"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".3333"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        android:background="@drawable/stats_btn"
        app:layout_constraintEnd_toStartOf="@+id/settingsBtn"
        app:layout_constraintStart_toEndOf="@+id/homeBtn"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:contentDescription="@string/settings_btn"
        android:id="@+id/settingsBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/settings_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toEndOf="@+id/statsBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".3333"/>

    <ImageView
        android:contentDescription="@string/logo"
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="200dp"
        android:layout_marginTop="75dp"
        app:layout_constraintTop_toBottomOf="@+id/statsBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@drawable/logo"/>

    <TextView
        android:id="@+id/company_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/company_name"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/company_text"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        app:layout_constraintEnd_toEndOf="parent"/>

    <TextView
        android:layout_width="wrap_content"
        android:id="@+id/email"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:text="@string/email"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.148"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/company_text"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toEndOf="@+id/email"
        app:layout_constraintTop_toBottomOf="@+id/company_text"
        app:layout_constraintEnd_toEndOf="parent"/>

    <ImageButton
        android:contentDescription="@string/checkin_btn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/check_in_btn"
        app:layout_constraintTop_toBottomOf="@id/email"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>