<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FFF"
    tools:context=".SettingsPage">

    <ImageButton
        android:contentDescription="@string/home_btn"
        android:id="@+id/homeBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        android:layout_gravity="start"
        android:background="@drawable/home_btn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".3333"
        android:orientation="vertical"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:contentDescription="@string/stats_btn"
        android:id="@+id/statsBtn"
        android:layout_width="0dp"
        app:layout_constraintWidth_percent=".3333"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        android:background="@drawable/stats_btn"
        app:layout_constraintEnd_toStartOf="@+id/settingsBtn"
        app:layout_constraintStart_toEndOf="@+id/homeBtn"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:contentDescription="@string/settings_btn"
        android:id="@+id/settingsBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/settings_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toEndOf="@+id/statsBtn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintWidth_percent=".3333"/>

    <TextView
        android:id="@+id/employee_id_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".25"
        android:text="@string/employee_id"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/employee_id_empty"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias=".25"
        app:layout_constraintHorizontal_bias=".1"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/employee_id_text"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:contentDescription="@string/change_email_btn"
        android:id="@+id/change_email"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/change_mail_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.45"
        app:layout_constraintWidth_percent="0.8"/>

    <ImageButton
        android:contentDescription="@string/change_pass_btn"
        app:layout_constraintVertical_bias="0.65"
        android:id="@+id/change_password"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintWidth_percent="0.8"
        android:background="@drawable/change_pass_btn"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <ImageButton
        android:contentDescription="@string/logout_btn"
        android:id="@+id/logout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/logout_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.85"
        app:layout_constraintWidth_percent="0.8"/>

</androidx.constraintlayout.widget.ConstraintLayout>