<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".StatsFragment"
    android:background="#FFF">

    <ImageButton
        android:id="@+id/allTimeBtn"
        app:layout_constraintStart_toEndOf="@+id/preMonthBtn"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/all_time_btn"
        android:contentDescription="@string/all_time_btn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintWidth_percent=".3333"/>

    <ImageButton
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/preMonthBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/pre_months_btn"
        android:contentDescription="@string/pre_month_btn"
        app:layout_constraintEnd_toStartOf="@id/allTimeBtn"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintStart_toEndOf="@+id/thisMonthBtn"
        app:layout_constraintWidth_percent=".3333"/>

    <ImageButton
        app:layout_constraintTop_toTopOf="parent"
        android:id="@+id/thisMonthBtn"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:background="@drawable/this_month_btn"
        android:contentDescription="@string/this_month_btn"
        app:layout_constraintEnd_toStartOf="@id/preMonthBtn"
        app:layout_constraintHeight_percent="0.06"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintWidth_percent=".3333"/>

    <TextView
        android:id="@+id/total_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".25"
        android:text="@string/total_hours"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/total_hours_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias=".25"
        app:layout_constraintHorizontal_bias=".1"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/total_hours"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>

    <TextView
        android:id="@+id/overtime_hours"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintVertical_bias=".35"
        android:text="@string/overtime_hours"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <TextView
        android:id="@+id/overtime_hours_counter"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintVertical_bias=".35"
        app:layout_constraintHorizontal_bias=".1"
        android:textSize="20sp"
        app:layout_constraintStart_toEndOf="@+id/overtime_hours"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"/>
</androidx.constraintlayout.widget.ConstraintLayout>